@startuml
' ============================================================
' PIXELVAULT - Diagrama Entidad-Relacion
' Base de datos: MySQL (pixelvault)
' ============================================================

skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam nodeFontSize 13

!define PK <color:#FF9800><b><u>PK</u></b></color>>
!define FK <color:#03A9F4><b><u>FK</u></b></color>>

' ============ USUARIO ============
entity "usuario" as u {
  * id : INT <PK>
  --
  * username : VARCHAR(50) UNIQUE
  * displayname : VARCHAR(100)
  * email : VARCHAR(120) UNIQUE
  * password_hash : VARCHAR(255)
  * rol : ENUM('cliente','admin')
  * pais : VARCHAR(50)
  * edad : VARCHAR(20)
  * plataforma : VARCHAR(30)
  * telefono : VARCHAR(30)
  * direccion : VARCHAR(255)
  * moneda : CHAR(3)
  * creado_el : TIMESTAMP
}

' ============ CATEGORIA ============
entity "categoria" as c {
  * id : INT <PK>
  --
  * nombre : VARCHAR(50) UNIQUE
  * activa : TINYINT(1)
}

' ============ PRODUCTO ============
entity "producto" as p {
  * id : INT <PK>
  --
  * nombre : VARCHAR(150)
  * descripcion : TEXT
  * categoria_id : INT <FK>
  * precio : DECIMAL(10,2)
  * imagen : VARCHAR(255)
  * cantidad : INT
  * stock_minimo : INT
  * estado : ENUM('activo','inactivo')
  * creado_el : TIMESTAMP
}

' ============ PEDIDO ============
entity "pedido" as ped {
  * id : INT <PK>
  --
  * usuario_id : INT <FK>
  * codigo : VARCHAR(20) UNIQUE
  * total : DECIMAL(10,2)
  * estado : ENUM('pendiente','procesando','enviado','entregado','cancelado')
  * creado_el : TIMESTAMP
}

' ============ DETALLE_PEDIDO ============
entity "detalle_pedido" as dp {
  * id : INT <PK>
  --
  * pedido_id : INT <FK>
  * producto_id : INT <FK>
  * nombre_producto : VARCHAR(150)
  * precio : DECIMAL(10,2)
  * cantidad : INT
}

' ============ CARRITO ============
entity "carrito" as cart {
  * id : INT <PK>
  --
  * usuario_id : INT <FK>
  * producto_id : INT <FK>
  * cantidad : INT
}

' ============ RELACIONES ============
u ||--o{ ped : "hace"
u ||--o{ cart : "posee"
c ||--o{ p : "clasifica"
p ||--o{ dp : "aparece en"
ped ||--o{ dp : "contiene"
p ||--o{ cart : "se anade a"

@enduml
